------------
- FIX: Error with modal dialogs in Linux
- FIX: Error when importing folders after canceling repository load
- FIX: Add random songs fails if repository not loaded or empty
- FIX: Disabled rounded corners with Substance as seem to cause problems with early 1.6.0 virtual machines (3.0.1 fix not working)
- FIX: Problem when importing files from a Windows system folder with no childs

aTunes 3.0.1
------------
- XINE Engine discontinued
- FIX: Better control of exceptions reading tags with JAudiotagger
- FIX: NPE when importing from a folder without parent file
- FIX: Disable play list menu actions when play list selection changes, not only popup menu
- FIX: Problem reordering columns with Java 7
- FIX: Problem changing look and feel and skin using keyboard in combos
- FIX: Error retrieving titles from CDDB while ripping a CD
- FIX: Avoid concurrency problems with album collections
- FIX: Updated JNA library to avoid initialization errors
- FIX: Initial heap size changed to 128MB
- FIX: Check if icon cache fails reading icon files
- FIX: Problem with play lists active and visible after upgrading version
- FIX: Problem marking artist as favorite when artist is unknown or artist album is used
- FIX: Disabled rounded corners with Substance as seem to cause problems with early 1.6.0 virtual machines
- FIX: Save covers to disk fails if artist or album name contains forbidden chars in file system

aTunes 3.0.0
------------
- Allow truncate playlist when copying to device [ patch by deathgorepain ]
- New options to organize artist view, using artist and / or album artist tag fields [ patch by Laurent Cathala ]
- Removed external pictures support, only pictures exported with application are supported
- Improved performance of Full Screen Mode
- Use dynamic heap size in Windows (5% of free memory for initial heap space, 10% for maximum heap space)
- New action to remove duplicates from play list