@@ -22,6 +22,7 @@ package net.sourceforge.atunes.gui;
 
 import java.awt.BorderLayout;
 import java.awt.Component;
+import java.awt.Dialog;
 
 import javax.swing.JComponent;
 import javax.swing.JWindow;
@@ -35,63 +36,71 @@ import net.sourceforge.atunes.model.ILookAndFeel;
  */
 final class FadingPopup extends Popup {
 
-    private JWindow popupWindow;
-    private WindowFader windowFader;
+	private final JWindow popupWindow;
+	private final WindowFader windowFader;
 
-    /**
-     * Instantiates a new fading popup.
-     * 
-     * @param contents
-     * @param ownerX
-     * @param ownerY
-     * @param shadowBorder
-     * @param lookAndFeel
-     */
-    FadingPopup(Component contents, int ownerX, int ownerY, boolean shadowBorder, ILookAndFeel lookAndFeel) {
-        // create a new heavyweighht window
-        this.popupWindow = new JWindow();
-        // determine the popup location
-        popupWindow.setLocation(ownerX, ownerY);
-        // add the contents to the popup
-        popupWindow.getContentPane().add(contents, BorderLayout.CENTER);
-        contents.invalidate();
-        JComponent parent = (JComponent) contents.getParent();
-        // set the shadow border
-        if (shadowBorder) {
-            Border shadow = lookAndFeel.getShadowBorder();
-            if (shadow != null) {
-                parent.setBorder(shadow);
-            }
-        }
-        this.windowFader = new WindowFader(popupWindow, 40) {
-            @Override
-            protected void fadeOutFinished() {
-                popupWindow.removeAll();
-                super.fadeOutFinished();
-            }
-        };
-    }
+	/**
+	 * Instantiates a new fading popup.
+	 * 
+	 * @param contents
+	 * @param ownerX
+	 * @param ownerY
+	 * @param shadowBorder
+	 * @param lookAndFeel
+	 */
+	FadingPopup(final Component contents, final int ownerX, final int ownerY,
+			final boolean shadowBorder, final ILookAndFeel lookAndFeel) {
+		// create a new heavyweighht window
+		this.popupWindow = new JWindow();
 
-    @Override
-    public void show() {
-        // mark the popup with 0% opacity
-        GuiUtils.setWindowOpacity(popupWindow, 0.0f);
+		// Solution for the problem
+		// "java.lang.IllegalStateException: Trying to unblock window blocked by another dialog"
+		// in Linux
+		this.popupWindow
+				.setModalExclusionType(Dialog.ModalExclusionType.APPLICATION_EXCLUDE);
 
-        this.popupWindow.setVisible(true);
-        this.popupWindow.pack();
+		// determine the popup location
+		this.popupWindow.setLocation(ownerX, ownerY);
+		// add the contents to the popup
+		this.popupWindow.getContentPane().add(contents, BorderLayout.CENTER);
+		contents.invalidate();
+		JComponent parent = (JComponent) contents.getParent();
+		// set the shadow border
+		if (shadowBorder) {
+			Border shadow = lookAndFeel.getShadowBorder();
+			if (shadow != null) {
+				parent.setBorder(shadow);
+			}
+		}
+		this.windowFader = new WindowFader(this.popupWindow, 40) {
+			@Override
+			protected void fadeOutFinished() {
+				FadingPopup.this.popupWindow.removeAll();
+				super.fadeOutFinished();
+			}
+		};
+	}
 
-        // mark the window as non-opaque, so that the
-        // shadow border pixels take on the per-pixel
-        // translucency
-        GuiUtils.setWindowOpaque(this.popupWindow, false);
+	@Override
+	public void show() {
+		// mark the popup with 0% opacity
+		GuiUtils.setWindowOpacity(this.popupWindow, 0.0f);
 
-        // start fading in
-        windowFader.fadeIn();
-    }
+		this.popupWindow.setVisible(true);
+		this.popupWindow.pack();
 
-    @Override
-    public void hide() {
-        // start fading out
-        windowFader.fadeOut();
-    }
+		// mark the window as non-opaque, so that the
+		// shadow border pixels take on the per-pixel
+		// translucency
+		GuiUtils.setWindowOpaque(this.popupWindow, false);
+
+		// start fading in
+		this.windowFader.fadeIn();
+	}
+
+	@Override
+	public void hide() {
+		// start fading out
+		this.windowFader.fadeOut();
+	}
 }
